feat: add javadoc | refactor: change the dockerfiles